test/scc/expr/semantic-errors/152.a
152.t:3:15: error: array of inappropriate type initialized from string constant